argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "<<YOUR_DOMAIN_HERE>>" # e.g., argocd.mincloud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - "<<YOUR_DOMAIN_HERE>>" # e.g., argocd.mincloud.org
      secretName: "<<YOUR_TLS_SECRET_NAME_HERE>>" # e.g., argocd-tls
